Forward ported changes from 1.0e

--- a/server/amq_server_base.cfg
+++ b/server/amq_server_base.cfg
@@ -14,31 +14,21 @@
         file provides example sections that you can copy to custom.cfg.
 
         Run "amq_server --help" for options help.
-    -->
 
-    <!-- Sample cluster configuration
-        - The vhost must be the same as used by applications at connect time
-        - The internal address, if specified, is used for intra-cluster work
-        - The host address is provided to clients
-    <cluster
-        vhost = "/"
-        heartbeat = "5"
-        >
-        <server
-            name = "cluster-001"
-            host = "si200505:5001"
-            internal = "localhost:5001"
-            primary = "1" />
-        <server
-            name = "cluster-002"
-            host = "si200505:5002"
-            internal = "localhost:5001"
-            backup = "1" />
-    </cluster>
-    -->
+    Syntax for message transfer agent (MTA) configuration
+    -----------------------------------------------------
 
-    <!-- These are default queue profiles:
-         Valid actions are:
+    <cluster-mta
+        name = "exchange-name"
+        vhost = "virtual-host"
+        host = "localhost:5000"
+        login = "peering"
+        mode = "0 | 1 | 2 | 3"      0=disabled, 1=subscriber, 2=fwd-all, 3=fwd-else
+    />
+
+    These are default queue profiles:
+    ---------------------------------
+        Valid actions are:
             warn - send message to alert log
             drop - drop the message
             trim - remove old messages from queue
@@ -48,7 +38,8 @@
          grow larger than the specified limit.
 
          Please define limits in ascending order.
-      -->
+    -->
+
     <queue_profile name = "private">
         <limit name = "warn" value = "10000" />
         <limit name = "trim" value = "50000" />
@@ -62,7 +53,7 @@
     <!-- These are the default passwords -->
     <security name = "plain">
         <user name = "guest"   password = "guest"   group = "normal" />
-        <user name = "super"   password = "super"   group = "super" />
-        <user name = "cluster" password = "cluster" group = "cluster" />
+        <user name = "super"   password = "super"   group = "super"  />
+        <user name = "peering" password = "peering" group = "super"  />
     </security>
 </config>
