--- a/kernel/amq_server_base.cfg
+++ b/kernel/amq_server_base.cfg
@@ -23,7 +23,7 @@
         vhost = "virtual-host"
         host = "localhost:5000"
         login = "peering"
-        mode = "0 | 1 | 2 | 3"      0=disabled, 1=subscriber, 2=fwd-all, 3=fwd-else
+        mode = "0 | 1 | 2 | 3 | 4"      0=disabled, 1=subscriber, 2=fwd-all, 3=fwd-else, 4=both
     />
 
     These are default queue profiles:
