--- a/kernel/amq_server_base.cfg
+++ b/kernel/amq_server_base.cfg
@@ -18,7 +18,7 @@
     Syntax for message transfer agent (MTA) configuration
     -----------------------------------------------------
 
-    <cluster-mta
+    <cluster_mta
         name = "exchange-name"
         vhost = "virtual-host"
         host = "localhost:5000"
