--- a/java/build.xml
+++ b/java/build.xml
@@ -139,7 +139,7 @@
 -->
 <target name="jar" depends = "compiletests">
     <mkdir dir = "${dist}" />
-    <jar basedir = "${generate.classes}"   jarfile = "${dist}/openamqj-generate.jar" />
+    <jar basedir = "${generate.classes}"   jarfile = "${dist}/openamqj-common.jar" />
     <jar basedir = "${client.classes}"     jarfile = "${dist}/openamqj-jms.jar" />
     <jar basedir = "${client.testclasses}" jarfile = "${dist}/openamqj-tests.jar" />
 </target>
