--- a/java/build.xml
+++ b/java/build.xml
@@ -15,9 +15,8 @@
 <property name = "generate.saxon"     value = "${lib}/saxon/saxon8.jar" />
 <property name = "generate.resources" value = "${basedir}/resources" />
 <property name = "generate.spec"      value = "${generate.resources}/amqp.0-9.xml" />
-<property name = "generate.base"      value = "${basedir}/generated/src" />
-<property name = "generate.src"       value = "${generate.base}/org/openamq/framing" />
-<property name = "generate.classes"   value = "${basedir}/generated/classes" />
+<property name = "generate.src"       value = "${basedir}/generated/src" />
+<property name = "generate.output"    value = "${generate.src}/org/openamq/framing" />
 <property name = "client.src"         value = "${basedir}/src" />
 <property name = "client.classes"     value = "${basedir}/classes" />
 <property name = "tests.src"          value = "${basedir}/tests/src" />
@@ -28,7 +27,7 @@
     Setup build tree
 -->
 <target name = "init">
-    <mkdir dir = "${generate.classes}" />
+    <mkdir dir = "${generate.src}" />
     <mkdir dir = "${client.classes}" />
     <mkdir dir = "${tests.classes}" />
 </target>
@@ -37,7 +36,6 @@
     <fileset dir = "${lib}">
         <include name = "**/*.jar" />
     </fileset>
-    <pathelement path = "${generate.classes}" />
     <pathelement path = "${client.classes}" />
     <pathelement path = "${tests.classes}" />
 </path>
@@ -46,7 +44,7 @@
     Clean
 -->
 <target name = "clean" depends = "init">
-    <delete dir = "${generate.base}" />
+    <delete dir = "${generate.src}" />
     <delete dir = "${client.classes}" />
     <delete dir = "${tests.classes}" />
 </target>
@@ -57,16 +55,16 @@
 <target name = "check-generate">
     <uptodate 
         property   = "generateNotRequired" 
-	targetfile = "${generate.src}/results.out" 
+	targetfile = "${generate.output}/results.out" 
 	srcfile    = "${generate.spec}"
 	/>
 </target>
 
 <target name = "generate" depends = "check-generate" unless = "${generateNotRequired}">
-    <mkdir dir = "${generate.src}" />
+    <mkdir dir = "${generate.output}" />
     <java jar = "${generate.saxon}" fork = "true">
 	<arg value = "-o"/>
-	<arg value = "${generate.src}/results.out" />
+	<arg value = "${generate.output}/results.out" />
 	<arg value = "${generate.spec}" />
 	<arg value = "${generate.resources}/framing.xsl" />
 	<arg value = "asl_base=${asl.base}" />
@@ -74,7 +72,7 @@
     </java>
     <java jar = "${generate.saxon}" fork = "true">
 	<arg value = "-o" />
-	<arg value = "${generate.src}/registry.out" />
+	<arg value = "${generate.output}/registry.out" />
 	<arg value = "${generate.resources}/registry.template" />
 	<arg value = "${generate.resources}/registry.xsl" />
     </java>
@@ -85,43 +83,32 @@
 -->
 <target name = "compile" depends = "init, generate">
     <javac 
-        destdir = "${generate.classes}" 
-        target  = "1.5" 
-        source  = "1.5" 
-        debug   = "on"
-        >
-        <classpath refid = "openamq.classpath" />
-        <src path = "${generate.src}" />
-    </javac>
-
-    <javac 
         destdir = "${client.classes}" 
         target  = "1.5" 
         source  = "1.5" 
         debug   = "on"
         >
         <classpath refid = "openamq.classpath" />
+        <src path = "${generate.src}" />
         <src path = "${client.src}" />
     </javac>
 
-    <copy todir = "${generate.classes}">
+    <copy todir = "${client.classes}">
         <!-- copy any non java src files into the build tree, e.g. log4j.properties -->
         <fileset dir = "${generate.src}">
             <exclude name = "**/*.java" />
             <exclude name = "**/package.html" />
         </fileset>
-        <fileset dir = "${generate.resources}">
-            <exclude name = "**/*.java" />
-            <exclude name = "**/package.html" />
-        </fileset>
-    </copy>
-
-    <copy todir = "${client.classes}">
-        <!-- copy any non java src files into the build tree, e.g. log4j.properties -->
         <fileset dir = "${client.src}">
             <exclude name = "**/*.java" />
             <exclude name = "**/package.html" />
         </fileset>
+	<!--
+        <fileset dir = "${generate.resources}">
+            <exclude name = "**/*.java" />
+            <exclude name = "**/package.html" />
+        </fileset>
+	-->
     </copy>
 </target>
 
@@ -153,10 +140,7 @@
 -->
 <target name="jar" depends = "compiletests">
     <mkdir dir = "${dist}" />
-    <jar destfile = "${dist}/openamq-java.jar">
-        <fileset dir = "${generate.classes}" />
-	<fileset dir = "${client.classes}" />
-    </jar>
+    <jar destfile = "${dist}/openamq-java.jar"       basedir = "${client.classes}" />
     <jar destfile = "${dist}/openamq-java-tests.jar" basedir = "${tests.classes}" />
 </target>
 
