--- a/java/build.xml
+++ b/java/build.xml
@@ -163,6 +163,28 @@
     description = "Build JAR archives in ./dist/"
     >
     <mkdir dir = "${dist}" />
+    <manifest file = "${dist}/MANIFEST.MF">
+        <attribute name = "Built-By"   value = "${user.name}" />
+        <section name = "org.openamq">
+            <attribute name = "Specification-Title"    value = "AMQP" />
+            <attribute name = "Specification-Version"  value = "${version}" />
+            <attribute name = "Specification-Vendor"   value = "AMQP Working Group, http://www.amqp.org/" />
+            <attribute name = "Implementation-Title"   value = "OpenAMQ Java Client" />
+            <attribute name = "Implementation-Version" value = "${version}" /> 
+            <attribute name = "Implementation-Vendor"  value = "iMatix Corporation" />
+            <attribute name = "Implementation-URL"     value = "http://www.openamq.org/" />
+        </section>
+    </manifest>
+    <jar 
+        destfile = "${dist}/openamq-java-${version}.jar"       
+        basedir  = "${client.classes}" 
+        manifest = "${dist}/MANIFEST.MF"
+        />
+    <jar 
+        destfile = "${dist}/openamq-java-tests-${version}.jar" 
+        basedir  = "${tests.classes}"
+        manifest = "${dist}/MANIFEST.MF"
+        />
     <copy todir = "${dist}">
         <fileset dir = "${lib}">
             <include name = "**/*.jar" />
@@ -195,16 +217,6 @@
     </manifest>
     <jar 
         destfile = "${dist}/openamq-java-launch.jar"
-        manifest = "${dist}/MANIFEST.MF"
-        />
-    <jar 
-        destfile = "${dist}/openamq-java-${version}.jar"       
-        basedir  = "${client.classes}" 
-        manifest = "${dist}/MANIFEST.MF"
-        />
-    <jar 
-        destfile = "${dist}/openamq-java-tests-${version}.jar" 
-        basedir  = "${tests.classes}"
         manifest = "${dist}/MANIFEST.MF"
         />
 </target>
