Some basic documentation fixes for OpenAMQ 1.2c3

--- a/website/build.xml
+++ b/website/build.xml
@@ -62,7 +62,7 @@ More information: [page:build_win32]
 Building OpenAMQ/JMS
 ********************
 
-Please see: [page:build_jms]
+Coming soon.
 
 </content>
 </page>
