--- a/server/amq_server_resource.rc
+++ b/server/amq_server_resource.rc
@@ -5,12 +5,12 @@
 #   it under the terms of the GNU General Public License as published by
 #   the Free Software Foundation; either version 2 of the License, or (at
 #   your option) any later version.
-# 
+#
 #   This program is distributed in the hope that it will be useful, but
 #   WITHOUT ANY WARRANTY; without even the implied warranty of
 #   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 #   General Public License for more details.
-# 
+#
 #   For information on alternative licensing for OEMs, please contact
 #   iMatix Corporation.
 #
@@ -18,4 +18,4 @@
 #   Resources used by OpenAMQ server
 
 amq_console_schema.cml
-
+amq_server_base.cfg
