--- a/zyre/zyre.cfg
+++ b/zyre/zyre.cfg
@@ -1,4 +1,15 @@
 <?xml?>
 <config>
     <server port = "8080" />
+    <access>
+        <!-- Secure the /dir area -->
+        <policy name = "digest" uri = "/dir">
+            <always>
+                <authenticate mechanism = "digest" realm = "testrealm@host.com" />
+            </always>
+            <group value = "users">
+                <allow />
+            </group>
+        </policy>
+    </access>
 </config>
